[tool.poetry]
name = "repl_nix_auto-wall-reposter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
python-dotenv = "^1.0.0"
tweepy = "^4.14.0"
aiohttp = "^3.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
