[tool.poetry]
name = "repl_nix_marcel-bot"
version = "1.0.0"
description = ""
authors = ["kensoi <kensoi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
python-dotenv = "^1.0.0"
tweepy = "^4.14.0"
aiohttp = "^3.8.5"
watchdog = "3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
